--- a/tweety-simple-project/pom.xml
+++ b/tweety-simple-project/pom.xml
@@ -5,4 +5,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Tweety Simple Project</name>
   <description>Simple project for tweety testing</description>
+  <dependencies>
+  	<dependency>
+   		<groupId>net.sf.tweety</groupId>
+   		<artifactId>tweety-full</artifactId>
+   		<version>1.8</version>
+	</dependency>
+  </dependencies>
 </project>
